err/pyoracle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyOracle-5.5.egg-info'...
Listing './lib/python3.5/site-packages/Resources'...
Compiling './lib/python3.5/site-packages/Resources/DrawOracle.py'...
***   File "./lib/python3.5/site-packages/Resources/DrawOracle.py", line 28
    print 'pil not loaded - hopefully running in max'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Resources/PyOracle'...
Compiling './lib/python3.5/site-packages/Resources/PyOracle/FactOracle.py'...
***   File "./lib/python3.5/site-packages/Resources/PyOracle/FactOracle.py", line 154
    print "Generating codes with encode()."
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Resources/analysis.py'...
***   File "./lib/python3.5/site-packages/Resources/analysis.py", line 33
    print "Codes not generated. Generating codes with encode()."
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Resources/helpers.py'...
***   File "./lib/python3.5/site-packages/Resources/helpers.py", line 33
    print 'bregman suite not imported - hopefully running in max'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/pyoracle_demo.py'...
***   File "./lib/python3.5/site-packages/examples/pyoracle_demo.py", line 45
    print 'ideal distance threshold:', ideal_t[0][1]
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/factoracle.py'...
***   File "./lib/python3.5/site-packages/factoracle.py", line 148
    print 'testing threshold:', threshold
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Compiling './lib/python3.5/site-packages/pyoracle.py'...
***   File "./lib/python3.5/site-packages/pyoracle.py", line 141
    print 'testing threshold:', threshold
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
